Added log,auth,regexp
